--- a/src/app/components/shared-dashboard/shared-dashboard.component.html
+++ b/src/app/components/shared-dashboard/shared-dashboard.component.html
@@ -10,7 +10,6 @@
     <div class="dropdown mt-3">
       <button (click)="toggleDropdown()" class="dropdown-btn">
         Administración General
-        <span [class.open]="isDropdownOpen">&#9660;</span>
       </button>
       <ul [class.open]="isDropdownOpen" class="dropdown-menu">
         <li *ngFor="let project of projects" (click)="selectProject(project)">
@@ -22,29 +21,13 @@
       </p>
     </div>
 
+    <!-- Navegación -->
     <nav>
       <ul class="nav flex-column">
-        <!-- Panel de Control como primera opción -->
+        <!-- Panel de Control -->
         <li class="nav-item">
           <a [routerLink]="['/dashboard']" class="section-title">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-layout-dashboard"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="#000000"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M4 4h6v8h-6z" />
-              <path d="M4 16h6v4h-6z" />
-              <path d="M14 12h6v8h-6z" />
-              <path d="M14 4h6v4h-6z" />
-            </svg>
+            <i class="ti ti-layout-dashboard"></i>
             Panel de Control
           </a>
         </li>
@@ -56,80 +39,19 @@
             [class.active]="activeSections.has('gestiones')"
             (click)="toggleSection('gestiones')"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-clipboard-typography"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="#000000"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path
-                d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2"
-              />
-              <path
-                d="M9 3m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v0a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z"
-              />
-              <path d="M9 12v-1h6v1" />
-              <path d="M12 11v6" />
-              <path d="M11 17h2" />
-            </svg>
+            <i class="ti ti-clipboard-text"></i>
             Gestiones
           </div>
           <ul *ngIf="activeSections.has('gestiones')" class="section-content">
             <li>
               <a [routerLink]="['/employees']">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="icon icon-tabler icon-tabler-user-edit"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="#000000"
-                  fill="none"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" />
-                  <path d="M6 21v-2a4 4 0 0 1 4 -4h3.5" />
-                  <path
-                    d="M18.42 15.61a2.1 2.1 0 0 1 2.97 2.97l-3.39 3.42h-3v-3l3.42 -3.39z"
-                  />
-                </svg>
+                <i class="ti ti-user-edit"></i>
                 Empleados
               </a>
             </li>
             <li>
               <a [routerLink]="['/machinery']">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="icon icon-tabler icon-tabler-bulldozer"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="#000000"
-                  fill="none"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M2 17a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" />
-                  <path d="M12 17a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" />
-                  <path d="M19 13v4a2 2 0 0 0 2 2h1" />
-                  <path d="M14 19h-10" />
-                  <path d="M4 15h10" />
-                  <path d="M9 11v-5h2a3 3 0 0 1 3 3v6" />
-                  <path d="M5 15v-3a1 1 0 0 1 1 -1h8" />
-                  <path d="M19 17h-3" />
-                </svg>
+                <i class="ti ti-bulldozer"></i>
                 Maquinaria
               </a>
             </li>
@@ -143,88 +65,31 @@
             [class.active]="activeSections.has('operaciones')"
             (click)="toggleSection('operaciones')"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-brand-stackshare"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="#000000"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M19 6m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
-              <path d="M19 18m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
-              <path d="M5 12m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
-              <path d="M7 12h3l3.5 6h3.5" />
-              <path d="M17 6h-3.5l-3.5 6" />
-            </svg>
+            <i class="ti ti-stack"></i>
             Operaciones
           </div>
           <ul *ngIf="activeSections.has('operaciones')" class="section-content">
             <li>
-              <a [routerLink]="['/calendar']"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  x-bind:width="size"
-                  x-bind:height="size"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  x-bind:stroke-width="stroke"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  width="24"
-                  height="24"
-                  stroke-width="2"
-                >
-                  <path
-                    d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z"
-                  ></path>
-                  <path d="M16 3v4"></path>
-                  <path d="M8 3v4"></path>
-                  <path d="M4 11h16"></path>
-                  <path d="M7 14h.013"></path>
-                  <path d="M10.01 14h.005"></path>
-                  <path d="M13.01 14h.005"></path>
-                  <path d="M16.015 14h.005"></path>
-                  <path d="M13.015 17h.005"></path>
-                  <path d="M7.01 17h.005"></path>
-                  <path d="M10.01 17h.005"></path></svg
-                >Calendario Laboral</a
-              >
+              <a [routerLink]="['/calendar']">
+                <i class="ti ti-calendar-event"></i>
+                Calendario Laboral
+              </a>
             </li>
             <li>
-              <a [routerLink]="['/projects']"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  x-bind:width="size"
-                  x-bind:height="size"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  x-bind:stroke-width="stroke"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  width="24"
-                  height="24"
-                  stroke-width="2"
-                >
-                  <path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
-                  <path
-                    d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"
-                  ></path>
-                  <path
-                    d="M10.5 17h.333c.474 0 .87 -.323 .916 -.746l.502 -4.508c.047 -.423 .443 -.746 .916 -.746h.333"
-                  ></path>
-                  <path d="M10.5 14h3"></path></svg
-                >Proyectos</a
-              >
+              <a [routerLink]="['/projects']">
+                <i class="ti ti-folder"></i>
+                Proyectos
+              </a>
             </li>
           </ul>
+        </li>
+
+        <!-- Combustible (Nuevo Apartado) -->
+        <li class="nav-item">
+          <a [routerLink]="['/fuel']" class="section-title">
+            <i class="ti ti-gas-station"></i>
+            Combustible
+          </a>
         </li>
 
         <!-- Recursos -->
@@ -234,98 +99,20 @@
             [class.active]="activeSections.has('recursos')"
             (click)="toggleSection('recursos')"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-ballpen-filled"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="#000000"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path
-                d="M17.828 2a3 3 0 0 1 1.977 .743l.145 .136l1.171 1.17a3 3 0 0 1 .136 4.1l-.136 .144l-1.706 1.707l2.292 2.293a1 1 0 0 1 .083 1.32l-.083 .094l-4 4a1 1 0 0 1 -1.497 -1.32l.083 -.094l3.292 -3.293l-1.586 -1.585l-7.464 7.464a3.828 3.828 0 0 1 -2.474 1.114l-.233 .008c-.674 0 -1.33 -.178 -1.905 -.508l-1.216 1.214a1 1 0 0 1 -1.497 -1.32l.083 -.094l1.214 -1.216a3.828 3.828 0 0 1 .454 -4.442l.16 -.17l10.586 -10.586a3 3 0 0 1 1.923 -.873l.198 -.006zm0 2a1 1 0 0 0 -.608 .206l-.099 .087l-1.707 1.707l2.586 2.585l1.707 -1.706a1 1 0 0 0 .284 -.576l.01 -.131a1 1 0 0 0 -.207 -.609l-.087 -.099l-1.171 -1.171a1 1 0 0 0 -.708 -.293z"
-                stroke-width="0"
-                fill="currentColor"
-              />
-            </svg>
-            Recursos
+            <i class="ti ti-ballpen"></i>
+            Productividad
           </div>
           <ul *ngIf="activeSections.has('recursos')" class="section-content">
             <li>
-              <a [routerLink]="['/fuel']"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  x-bind:width="size"
-                  x-bind:height="size"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  x-bind:stroke-width="stroke"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  width="24"
-                  height="24"
-                  stroke-width="2"
-                >
-                  <path
-                    d="M14 11h1a2 2 0 0 1 2 2v3a1.5 1.5 0 0 0 3 0v-7l-3 -3"
-                  ></path>
-                  <path d="M4 20v-14a2 2 0 0 1 2 -2h6a2 2 0 0 1 2 2v14"></path>
-                  <path d="M3 20l12 0"></path>
-                  <path d="M18 7v1a1 1 0 0 0 1 1h1"></path>
-                  <path d="M4 11l10 0"></path></svg
-                >Combustible</a
-              >
-            </li>
-            <!-- Nuevo enlace para Asignación de Combustible -->
-            <li>
               <a [routerLink]="['/fuel-assignment']">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  width="24"
-                  height="24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <path d="M12 20v-2M6 20v-4a4 4 0 0 1 4-4h8"></path>
-                  <path
-                    d="M17 8h1a3 3 0 0 1 3 3v4a1 1 0 0 1 -1 1h-5v4m-4 -8v4"
-                  ></path>
-                  <circle cx="9" cy="7" r="3"></circle>
-                </svg>
-                Reporte
+                <i class="ti ti-report"></i>
+                Racionamiento
               </a>
             </li>
-
             <li>
               <a [routerLink]="['/employee-schedule']">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  width="24"
-                  height="24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <path d="M12 20v-2M6 20v-4a4 4 0 0 1 4-4h8"></path>
-                  <path
-                    d="M17 8h1a3 3 0 0 1 3 3v4a1 1 0 0 1 -1 1h-5v4m-4 -8v4"
-                  ></path>
-                  <circle cx="9" cy="7" r="3"></circle>
-                </svg>
-                Calendario Personal
+                <i class="ti ti-calendar"></i>
+                Horario Laboral
               </a>
             </li>
           </ul>
@@ -333,12 +120,13 @@
       </ul>
     </nav>
 
-    <div class="usuario mt-auto d-flex align-items-center">
+    <!-- Información del Usuario y Cerrar Sesión -->
+    <div class="usuario mt-auto d-flex align-items-center user-info-container">
       <img
         src="assets/icon-admin.png"
         alt="Usuario"
         height="50px"
-        class="me-2"
+        class="user-avatar"
       />
       <div class="info-usuario">
         <span class="nombre">Bienvenido</span><br />
@@ -346,7 +134,7 @@
       </div>
     </div>
 
-    <button class="boton mt-4 w-100" (click)="openLogoutModal()">
+    <button class="boton mt-4 w-100 logout-btn" (click)="openLogoutModal()">
       Cerrar sesión
     </button>
   </div>
