--- a/src/app/components/fuel-assignment-table/fuel-assignment-table.component.css
+++ b/src/app/components/fuel-assignment-table/fuel-assignment-table.component.css
@@ -199,6 +199,42 @@ td:nth-child(7) {
   color: #007bff;
 }
 
+.detail-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.detail-button:hover {
+  background-color: #0056b3;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  max-width: 400px;
+  width: 100%;
+}
+
+
 /* Efecto de sombra en la tabla */
 tbody tr {
   transition: transform 0.2s ease;
