Mejora botón inicio

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -73,17 +73,38 @@
 }
 
 .ingresar-button {
-  background: linear-gradient(to right, #f59e0b, #f97316);
-  color: white; /* Asegúrate de que el color del texto sea blanco */
+  background: linear-gradient(to right, #ccc, #ccc); /* Inicialmente gris */
+  color: #777; /* Texto gris */
   font-weight: bold;
   padding: 10px 20px;
   border-radius: 8px;
   border: none;
-  cursor: pointer;
-  font-size: 16px; /* Aumenta el tamaño de la fuente si es necesario */
-  transition: background 0.3s ease; /* Añade una transición suave al hover */
+  cursor: not-allowed;
+  font-size: 16px;
+  transition: background 0.3s ease, color 0.3s ease; /* Transición suave */
 }
+
+/* Estilo cuando el botón no está deshabilitado */
+.ingresar-button:not(:disabled) {
+  background: linear-gradient(to right, #f59e0b, #f97316); /* Gradiente de colores */
+  color: white; /* Texto blanco */
+  cursor: pointer;
+}
+
+.ingresar-button:not(:disabled):hover {
+  background: linear-gradient(to right, #fbbf24, #ea580c); /* Gradiente más brillante al pasar el mouse */
+}
+
 
 .ingresar-button:hover {
   background: linear-gradient(to right, #fbbf24, #ea580c);
+}
+
+/* Estilo para el botón deshabilitado */
+.ingresar-button:disabled,
+.ingresar-button.disabled {
+  background-color: #ccc; /* Gris claro */
+  color: #777; /* Texto gris */
+  cursor: not-allowed;
+  pointer-events: none;
 }
