--- a/src/app/components/fuel-assignment-table/fuel-assignment-table.component.css
+++ b/src/app/components/fuel-assignment-table/fuel-assignment-table.component.css
@@ -234,6 +234,68 @@ td:nth-child(7) {
   width: 100%;
 }
 
+/* Sección de Filtro */
+.filter-section {
+  background-color: #f9fafb;
+  padding: 15px 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.filter-title {
+  font-size: 18px;
+  color: #333;
+  font-weight: bold;
+  text-align: left;
+  margin: 0;
+}
+
+.filter-options {
+  display: flex;
+  gap: 20px;
+}
+
+.filter-option {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 14px;
+  color: #555;
+  cursor: pointer;
+}
+
+.filter-option input[type="radio"] {
+  accent-color: #007bff;
+  width: 16px;
+  height: 16px;
+}
+
+.filter-inputs label {
+  display: block;
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 5px;
+}
+
+.filter-inputs input {
+  padding: 8px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  width: 100%;
+  max-width: 300px;
+}
+
+/* Mejora en el diseño de los inputs */
+.filter-inputs input:focus {
+  border-color: #007bff;
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
 
 /* Efecto de sombra en la tabla */
 tbody tr {
