--- a/src/app/components/employee-schedule/employee-schedule.component.html
+++ b/src/app/components/employee-schedule/employee-schedule.component.html
@@ -54,6 +54,11 @@
                 </div>
               </li>
             </ul>
+            <!-- Mostrar sumatoria de horas -->
+            <div class="total-hours">
+              <h4>Total de horas asignadas:</h4>
+              <p>{{ totalAssignedHours | number : "1.1-2" }} horas</p>
+            </div>
           </div>
         </div>
       </div>
