Mostrar la asignacion de maquina y las horas totales independientemente

--- a/src/app/components/employee-schedule/employee-schedule.component.html
+++ b/src/app/components/employee-schedule/employee-schedule.component.html
@@ -51,6 +51,10 @@
                     Horario: {{ assignment.formattedStart.split(",")[2] }} -
                     {{ assignment.formattedEnd }}
                   </div>
+                  <!-- Mostrar el nombre de la máquina -->
+                  <div class="assignment-machine">
+                    Máquina: {{ assignment.machineName }}
+                  </div>
                 </div>
               </li>
             </ul>
